rewrite: Added license headers, reordered imports